# d2sn-dataSprint-2024

./: 1_analyse.ipynb  2_data_augmentation.ipynb  2_data_augmentation_km.ipynb  2_data_augmentation_regions.ipynb  2_merge_df.py  2_scrapData.py  Avancée_Prixkm.ipynb  README.ipynb  README.md  analyse_1.ipynb  dataviz.ipynb  dataviz.py  pyproject.toml  resultat_fusion.csv
datasets/: emission-co2-tgv.csv  referentiel-gares-voyageurs.csv  tarifs-filtre.csv  tarifs-tgv-inoui-ouigo.csv
datasets/last_data/: prix_par_km.csv
draft_notebook/: Avancee_Prixkm.ipynb
