[tool.poetry]
name = "d2sn-datasprint-2024"
version = "0.1.0"
description = ""
authors = ["Mandresy ANDRIANTSOANAVALONA <13123849-mandresyandri@users.noreply.gitlab.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
plotly = "^5.24.1"
dash = "^2.18.1"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
geopandas = "^1.0.1"
contextily = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
